# sql_assistant

./: .gitignore  README.md  pyproject.toml  setup.py
sql_assistant/: handler.py  main.py
tests/: conftest.py  test_sql_assistant.py
tests/scrub/: base_data.yaml  sql_assistant.yaml
tests/test_api/: factory.py  helper.py  test_db.py  test_models.py
